add jss manuscript updates

--- a/manuscript/base/refs.bib
+++ b/manuscript/base/refs.bib
@@ -11,7 +11,7 @@
 @article{BenjaminiHochberg1995,
    author = {Y. Benjamini and Y. Hochberg},
    title = {Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing},
-   journal = {Journal of the Royal Statistical Society: Series B},
+   journal = {Journal of the Royal Statistical Society B},
    volume = {57},
    issue  = {1},
    pages = {289-300},
@@ -20,7 +20,7 @@
 @article{BenjaminiYekutieli2001,
    author = {Y. Benjamini and D. Yekutieli},
    title = {The Control of the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing under Dependency},
-   journal = {Annals of Statistics},
+   journal = {The Annals of Statistics},
    volume = {29},
    pages = {1165-1188},
    year = {2001}
@@ -63,10 +63,11 @@
    year = {2006}
 }
 
-@techreport{RN33091,
+@book{RN33091,
    author = {Bretz, F and Hothorn, T. and  Westfall, P.},
    title = {Multiple Comparisons Using {R}},
-   year = {2011}
+   publisher = {Chapman \& Hall/CRC},
+   year = {2010}
 }
 
 @article{RN23882,
@@ -161,7 +162,7 @@
    title = {On New Multiple Test Procedures Based on Independent {P-values} and the Assessment of their Powers},
    booktitle = {Multiple Hypotheses Testing},
    editor = {P. Bauer and G. Hommel and E. Sonnermann},
-   publisher = {Springer},
+   publisher = {Springer-Verlag},
    pages = {48-66},
    year = {1988}
 }
