--- a/validation/results/validate_wy.Rmd
+++ b/validation/results/validate_wy.Rmd
@@ -79,7 +79,7 @@ The Westfall-Young procedure was validated separately due to its unique complica
 First, we wrote a series of careful unit tests ensuring that our code worked as expected for each step of the WY procedure. One of these tests compared results from our procedure to the WY procedure in the multtest package, and found it matched quite well.
 
 Second, we also tested the WY procedures using the same simulation procedure described above.
-For constant effect and fixed effect models, the power estimation matches between PUM and the simulations.
+For constant effect and fixed effect models, the power estimation matches well between PUM and the simulations.
 However, for random effects models, the two methods diverge in some cases.
 We find that the simulated power matches the `PUMP`-calculated power only when (1) there is a large number of blocks/clusters, and (2) the user has a large number of WY permutations.
 Below, we discuss the single-step procedure because it is simpler, although the same concepts hold for the step-down procedure.
@@ -103,6 +103,9 @@ The large number of permutations is required because we are trying to estimate a
 With a significant outcome, it is rare that the observed $p$-value will be less than the minimum of $p$-values generated from the null distribution.
 The large number of blocks/clusters is required to accurately estimate the tail behavior for random effects models.
 With a small number of blocks/clusters, we may not properly estimate the spread of the distribution, resulting in a poor estimate of the tail behavior.
+
+*Remark* due to computational burden, for certain models we only tested WY-SS and not WY-SD.
+In some cases, we had to reduce the number of simulations, number of permutations, or the number of units in order to run a validation that was not computationally intractable.
 
 ```{r}
 Q <- 20
@@ -207,7 +210,7 @@ ggsave(
 ```{r}
 model.params.list <- model.params.default
 sim.params.list[['B']] <- 2000
-sim.params.list[['S']] <- 10 * Q
+sim.params.list[['S']] <- 30 * Q
 
 # assumptions
 model.params.list[['numCovar.3']] <- 0
@@ -309,7 +312,7 @@ sim.params.list[['S']] <- 30 * Q
 model.params.list[['nbar']] <- 100
 model.params.list[['J']] <- 10
 model.params.list[['K']] <- 10
-model.params.list[['MDES']] <- rep(0.3, M)
+model.params.list[['MDES']] <- rep(0.125, M)
 model.params.list[['ICC.3']] <- rep(0.1, M)
 model.params.list[['ICC.2']] <- rep(0.1, M)
 model.params.list[['R2.1']] <- rep(0.4, M)
