--- a/results/validate_wy.Rmd
+++ b/results/validate_wy.Rmd
@@ -17,7 +17,7 @@ library(here)
 library(pander)
 # default tables to round to 3 digits
 panderOptions('round', 3)
-source(here::here("validation/code", "misc.R"))
+source(here::here("code", "misc.R"))
 ```
 
 ```{r sim.params}
