--- a/results/summarize.Rmd
+++ b/results/summarize.Rmd
@@ -1,14 +1,9 @@
 ---
-title: "Validate Power: d2.1"
+title: "Summary of validation results"
 date: "`r format(Sys.Date(), '%B %d, %Y')`"
 output: pdf_document
 ---
 
-d_m: Blocked RCT, with 2 levels, and randomization done at level 1 (individual level).
-
-Models: Constant treatment effects, fixed treatment effects, and random treatment effects.
-
-Note: we expect a discrepancy when ICC is not zero between powerup and pump.
 
 ```{r knit.options, echo = FALSE}
 knitr::opts_chunk$set(
@@ -19,6 +14,7 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(here)
+library(kableExtra)
 library(magrittr) 
 library(PUMP)
 library(pander)
@@ -30,6 +26,7 @@ source(here::here("code", "misc.R"))
 ```
 
 ```{r}
+
 # extract and summarize results for a particular d_m
 get.d_m.results <- function(d_m, power.files)
 {
@@ -41,60 +38,24 @@ get.d_m.results <- function(d_m, power.files)
   d_m.results <- NULL
   for(file in results.files)
   {
-    print(file)
     results <- readRDS(here::here('output', file))
-    file.params <- unlist(strsplit(file, '_'))
-    
-    results$S      <- file.params[3]
-    results$M      <- file.params[5]
-    results$MDES   <- paste0(substr(file.params[9], 1, 1), '.', substr(file.params[9], 2, 4))
-    results$J      <- file.params[11]
-    results$K      <- file.params[13]
-    results$nbar   <- file.params[15]
-    results$rho    <- paste0(substr(file.params[17], 1, 1), '.', substr(file.params[17], 2, 2))
-    results$omega2 <- ifelse(
-      nchar(file.params[19]) == 0, 0,
-      paste0(substr(file.params[19], 1, 1), '.', substr(file.params[19], 2, 2))
-    )
-    results$omega3 <- ifelse(
-      nchar(file.params[21]) == 0, 0,
-      paste0(substr(file.params[21], 1, 1), '.', substr(file.params[21], 2, 2))
-    )
-    results$R21    <- ifelse(
-      nchar(file.params[23]) == 3, 0,
-      paste0(substr(file.params[23], 1, 1), '.', substr(file.params[23], 2, 2))
-    )
-    results$R22    <- ifelse(
-      nchar(file.params[25]) == 3 | nchar(file.params[25]) == 0, 0,
-      paste0(substr(file.params[25], 1, 1), '.', substr(file.params[25], 2, 2))
-    )
-    results$R23    <- ifelse(
-      nchar(file.params[27]) == 3 | nchar(file.params[27]) == 0, 0,
-      paste0(substr(file.params[27], 1, 1), '.', substr(file.params[27], 2, 2))
-    )
-    results$ICC2   <- ifelse(
-      nchar(file.params[29]) == 3 | nchar(file.params[29]) == 0, 0,
-      paste0(substr(file.params[29], 1, 1), '.', substr(file.params[29], 2, 2))
-    )
-    results$ICC3   <- ifelse(
-      nchar(file.params[31]) == 3 | nchar(file.params[31]) == 0, 0,
-      paste0(substr(file.params[31], 1, 1), '.', substr(file.params[31], 2, 2))
-    )
-    
+
     results.wide <- results %>%
       pivot_wider(names_from = c(method, value.type), values_from = value)
     
     d_m.results <- rbind(d_m.results, results.wide)
-    
   }
 
   row.names(d_m.results) <- NULL
   d_m.results %<>% mutate(
-    cover = sim_ci_lower < pum_adjusted_power & sim_ci_upper  > pum_adjusted_power,
-    abs_rel_bias = abs(sim_adjusted_power - pum_adjusted_power)/pum_adjusted_power
+    cover =
+      Sim_ci_lower < PUMP_adjusted_power &
+      Sim_ci_upper > PUMP_adjusted_power,
+    bias.sim = abs(Sim_adjusted_power - PUMP_adjusted_power) / PUMP_adjusted_power,
+    bias.pow = abs(PowerUp_adjusted_power - PUMP_adjusted_power) / PUMP_adjusted_power
   )
   d_m.results$d_m <- d_m
-  
+
   return(d_m.results)
 }
 ```
@@ -105,14 +66,21 @@ get.d_m.results <- function(d_m, power.files)
 all.files <- list.files(here::here('output'))
 # restrict to relevant files
 power.files <- grep('power', all.files, value = TRUE)
+# power.files <- grep('5000_S', power.files, value = TRUE)
 power.files <- grep('5000_S', power.files, value = TRUE)
 
-d_m.list <- c("d2.1_m2fc", "d2.1_m2ff", "d2.1_m2fr", "d2.2_m2rc", "d3.1_m3rr2rr", "d3.2_m3ff2rc", "d3.2_m3rr2rc", "d3.3_m3rc2rc")
+# d_m.list <- c(
+#   "d1.1_m1c", "d2.1_m2fc", "d2.1_m2ff", "d2.1_m2fr",
+#   "d2.2_m2rc", "d3.1_m3rr2rr", "d3.2_m3ff2rc", "d3.2_m3rr2rc", "d3.3_m3rc2rc"
+# )
+d_m.list <- c(
+  "d2.1_m2fc", "d2.1_m2ff", "d2.1_m2fr",
+  "d2.2_m2rc", "d3.1_m3rr2rr", "d3.2_m3ff2rc", "d3.2_m3rr2rc", "d3.3_m3rc2rc"
+)
 
 all.results <- NULL
 for(d_m in d_m.list)
 {
-  print(d_m)
   d_m.results <- get.d_m.results(d_m, power.files)
   all.results <- rbind(all.results, d_m.results)
 }
@@ -121,10 +89,42 @@ for(d_m in d_m.list)
 ```{r}
 # summarize
 summary.results <- ddply(
-  all.results, c('MTP', 'power_type'), summarise,
+  all.results, c('d_m', 'MTP', 'power_type'), summarise,
   cover = mean(cover),
-  mean_abs_rel_bias = mean(abs_rel_bias)
+  mean.bias.sim = mean(bias.sim),
+  mean.bias.pow = mean(bias.pow)
 )
+
+# extract out problem rows
+problems <- all.results[!is.na(all.results$cover) & all.results$cover != 1,]
+problems <- problems %>%
+  dplyr::select(
+    MTP, power_type, PUMP_adjusted_power,
+    PowerUp_adjusted_power, Sim_adjusted_power,
+    Sim_ci_upper, Sim_ci_lower
+  )
+
+print(problems)
+```
+
+```{r}
+# summarize
+summary.results <- ddply(
+  all.results, c('d_m', 'MTP', 'power_type'), summarise,
+  cover = mean(cover),
+  mean.bias.sim = mean(bias.sim),
+  mean.bias.pow = mean(bias.pow)
+)
+```
+
+
+```{r, results = 'asis'}
+for(scenario in d_m.list)
+{
+  table.data <- dplyr::filter(summary.results, d_m == scenario)
+  
+  print(kable(table.data, booktabs = TRUE, row.names = FALSE))
+}
 ```
 
 
