--- a/results_0221/validate_d33.Rmd
+++ b/results_0221/validate_d33.Rmd
@@ -8,8 +8,6 @@ Design: Cluster RCT, with 3 levels, and randomization done at level 3 (district 
 
 Models: random treatment effects.
 
-d_m codes: `d3.3_m3rc2rc`
-
 ```{r knit.options, echo = FALSE}
 # by default, all code chunks will cache their results
 knitr::opts_chunk$set(
@@ -24,7 +22,7 @@ library(PUMP)
 library(pander)
 # default tables to round to 3 digits
 panderOptions('round', 3)
-source(here::here("code", "misc.R"))
+source(here::here("validation/code", "misc.R"))
 ```
 
 ```{r sim.params}
@@ -351,7 +349,7 @@ For other corrections, the power curve is very flat.
 ```{r, results = 'hide', fig.width=5, fig.height=4}
 set.seed(343059)
 smp <- PUMP::pump_sample(
-  d_m = "d3.3_m3rc2rc",
+  design = "d3.3_m3rc2rc",
   MTP = 'BH',
   typesample = 'J',
   MDES = model.params.list[['MDES']],
@@ -402,7 +400,7 @@ if(length(sample.file) == 0)
 ```{r, results = 'hide', fig.width=5, fig.height=4}
 set.seed(343059)
 smp <- PUMP::pump_sample(
-  d_m = "d3.3_m3rc2rc",
+  design = "d3.3_m3rc2rc",
   MTP = 'BH',
   typesample = 'nbar',
   MDES = model.params.list[['MDES']],
