--- a/results_0221/validate_d31.Rmd
+++ b/results_0221/validate_d31.Rmd
@@ -1,17 +1,14 @@
 ---
-title: "Validate Power: d3.3"
+title: "Validate Power: d3.1"
 date: "`r format(Sys.Date(), '%B %d, %Y')`"
 output: pdf_document
 ---
 
-Design: Cluster RCT, with 3 levels, and randomization done at level 3 (district level).
+Design: Blocked RCT, with 3 levels, and randomization done at level 1 (individual level).
 
 Models: random treatment effects.
 
-d_m codes: `d3.3_m3rc2rc`
-
 ```{r knit.options, echo = FALSE}
-# by default, all code chunks will cache their results
 knitr::opts_chunk$set(
   cache = FALSE, warning = FALSE, message = FALSE, echo = FALSE,
   fig.height = 7
@@ -24,7 +21,7 @@ library(PUMP)
 library(pander)
 # default tables to round to 3 digits
 panderOptions('round', 3)
-source(here::here("code", "misc.R"))
+source(here::here("validation/code", "misc.R"))
 ```
 
 ```{r sim.params}
@@ -38,77 +35,74 @@ sim.params.list <- list(
 M <- 3
 model.params.list <- list(
   M = 3                                   # number of outcomes
-  , J = 40                                # number of schools
-  , K = 20                                # number of districts (for two-level model, set K = 1)
-  , nbar = 50                             # number of individuals per school
+  , J = 30                                # number of schools
+  , K = 15                                # number of districts (for two-level model, set K = 1)
+  , nbar = 100                             # number of individuals per school
   , rho.default = 0.5                     # default rho value
   ################################################## grand mean outcome and impact
-  , MDES = rep(0.25, M)                  # minimum detectable effect size      
+  , MDES = rep(0.125, M)                  # minimum detectable effect size      
   ################################################## level 3: districts
-  , numCovar.3 = 1                        # number of district covariates
-  , R2.3 = rep(0.1, M)                    # percent of district variation explained by district covariates
-  , ICC.3 = rep(0.1, M)                   # district intraclass correlation
+  , ICC.3 = rep(0.2, M)                   # district intraclass correlation
+  , omega.3 = rep(0.1, M)                 # ratio of district effect size variability to random effects 
   ################################################## level 2: schools
-  , numCovar.2 = 1                        # number of school covariates
-  , R2.2 = rep(0.1, M)                    # percent of school variation explained by school covariates
-  , ICC.2 = rep(0.1, M)                   # school intraclass correlation	
+  , ICC.2 = rep(0.2, M)                   # school intraclass correlation	
+  , omega.2 = rep(0.1, M)                 # ratio of school effect size variability to random effects
   ################################################## level 1: individuals
   , numCovar.1 = 1                        # number of individual covariates
   , R2.1 = rep(0.1, M)                    # percent of indiv variation explained by indiv covariates
 )
-
-d_m <- "d3.3_m3rc2rc"
 params.default <- model.params.list
+d_m <- "d3.1_m3rr2rr"
 ```
 
-# Power Validation
-
-Default parameters:
 
 * M = `r model.params.list[['M']]`
 * J = `r model.params.list[['J']]`
 * K = `r model.params.list[['K']]`
+* $\bar{n} = 100$ (unless otherwise noted)
 * rho: $\rho$ =  `r model.params.list[['rho.default']]`
 * MDES = `r model.params.list[['MDES']]`
-* R2: $R^2_1$ = `r model.params.list[['R2.1']]`, $R^2_2$ = `r model.params.list[['R2.2']]`, $R^2_3$ = `r model.params.list[['R2.3']]`
+* R2: $R^2_1$ = `r model.params.list[['R2.1']]`
 * ICC: $\text{ICC}_2$ = `r model.params.list[['ICC.2']]`, $\text{ICC}_3$ = `r model.params.list[['ICC.3']]`
-* Omega: $\omega_2 = 0$, $\omega_3 = 0$
+* Omega: $\omega_2$ = `r model.params.list[['omega.2']]`, $\omega_3$ = `r model.params.list[['omega.3']]`
+
+# Power Validation
 
 ## Base case
 
-```{r 3r_nj50}
-d3.3_m3rc2rc_nj50_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_nj50_power_plot)
+```{r 3r_nbar100}
+params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
+d3.1_m3rr2rr_nbar100_power_plot <- gen.power.results.plot(params.file.base, d_m)
+print(d3.1_m3rr2rr_nbar100_power_plot)
 ```
 
 \newpage
 ## Varying school size
 
-```{r nj100}
-model.params.list[['nbar']] <- 100
+```{r nbar75}
+model.params.list[['nbar']] <- 75
 ```
 
 $\bar{n}$ = `r model.params.list[['nbar']]`
 
-```{r 3r_nj100}
-params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-d3.3_m3rc2rc_nj100_power_plot <- gen.power.results.plot(params.file.base, d_m)
-print(d3.3_m3rc2rc_nj100_power_plot)
+```{r 3r_nbar75}
+d3.1_m3rr2rr_nbar75_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_nbar75_power_plot)
 ```
 
-```{r nj75}
-model.params.list[['nbar']] <- 75
+```{r nbar50}
+model.params.list[['nbar']] <- 50
 ```
 \newpage
 $\bar{n}$ = `r model.params.list[['nbar']]`
 
-```{r 3r_nj75}
-d3.3_m3rc2rc_nj75_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_nj75_power_plot)
+```{r 3r_nbar50}
+d3.1_m3rr2rr_nbar50_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_nbar50_power_plot)
 ```
 
-```{r nbarreset}
-model.params.list[['nbar']] <- 50
+```{r nreset}
+model.params.list[['nbar']] <- 100
 ```
 
 \newpage
@@ -121,51 +115,22 @@ model.params.list[['R2.1']] <- rep(0.6, M)
 $R^2_1 =$ `r model.params.list[['R2.1']]`
 
 ```{r 3r_r2106}
-d3.3_m3rc2rc_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_r2.1_power_plot)
+d3.1_m3rr2rr_r2.1_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_r2.1_power_plot)
 model.params.list[['R2.1']] <- params.default[['R2.1']]  
 ```
 
-```{r r2206}
-model.params.list[['R2.2']] <- rep(0.6, M)  
-```
-\newpage
-$R^2_2 =$ `r model.params.list[['R2.2']]`
-
-```{r 3r_r2206}
-d3.3_m3rc2rc_r2.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_r2.2_power_plot)
-model.params.list[['R2.2']] <- params.default[['R2.2']]  
-```
-
-```{r r2306}
-model.params.list[['R2.3']] <- rep(0.6, M)  
-```
-\newpage
-$R^2_3 =$ `r model.params.list[['R2.3']]`
-
-```{r 3r_r2306}
-d3.3_m3rc2rc_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_r2.3_power_plot)
-model.params.list[['R2.3']] <- params.default[['R2.3']]  
-```
 
 ```{r r210r220r230}
 model.params.list[['R2.1']] <- rep(0, M)  
-model.params.list[['R2.2']] <- rep(0, M)  
-model.params.list[['R2.3']] <- rep(0, M)  
 ```
 \newpage
 $R^2_1 =$ `r model.params.list[['R2.1']]`
-$R^2_2 =$ `r model.params.list[['R2.2']]`
-$R^2_3 =$ `r model.params.list[['R2.3']]`
 
 ```{r 3r_r210r220r230}
-d3.3_m3rc2rc_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_r2.3_power_plot)
+d3.1_m3rr2rr_r2.3_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_r2.3_power_plot)
 model.params.list[['R2.1']] <- params.default[['R2.1']]  
-model.params.list[['R2.2']] <- params.default[['R2.2']]  
-model.params.list[['R2.3']] <- params.default[['R2.3']]  
 ```
 
 
@@ -176,15 +141,15 @@ model.params.list[['R2.3']] <- params.default[['R2.3']]
 rho.default <- 0.2
 default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
 model.params.list[['rho.default']] <- rho.default
-model.params.list[['rho.X']] <- model.params.list[['rho.C']] <-rho.default
+model.params.list[['rho.X']] <- model.params.list[['rho.C']] <- rho.default
 model.params.list[['rho.u']] <- model.params.list[['rho.v']] <- model.params.list[['rho.r']] <- rho.default
 ```
 
 $\rho =$ `r model.params.list[['rho.default']]`
 
 ```{r 3r_rho02}
-d3.3_m3rc2rc_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_rho0.2_power_plot)
+d3.1_m3rr2rr_rho0.2_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_rho0.2_power_plot)
 ```
 
 ```{r rho08}
@@ -198,8 +163,8 @@ model.params.list[['rho.u']] <- model.params.list[['rho.v']] <- model.params.lis
 $\rho =$ `r model.params.list[['rho.default']]`
 
 ```{r 3r_rho08}
-d3.3_m3rc2rc_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_rho0.8_power_plot)
+d3.1_m3rr2rr_rho0.8_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_rho0.8_power_plot)
 # reset
 rho.default <- params.default[['rho.default']]
 default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
@@ -213,15 +178,15 @@ model.params.list[['rho.u']] <- model.params.list[['rho.v']] <- model.params.lis
 ## Varying true positives
 
 ```{r MDES012500}
-model.params.list[['MDES']] <- c(0.25, 0, 0)
+model.params.list[['MDES']] <- c(0.125, 0, 0)
 ```
 
 MDES = `r model.params.list[['MDES']]`
 
-```{r 3r_MDES012500}
-d3.3_m3rc2rc_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_mdes0.1250.00.0.00_power_plot)
-model.params.list[['MDES']] <- rep(0.25, M)
+```{r 23r_MDES012500}
+d3.1_m3rr2rr_mdes0.1250.00.0.00_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_mdes0.1250.00.0.00_power_plot)
+model.params.list[['MDES']] <- params.default[['MDES']]
 ```
 
 \newpage
@@ -234,8 +199,8 @@ model.params.list[['ICC.2']] <- rep(0.7, M)
 $\text{ICC}_2$ = `r model.params.list[['ICC.2']]`
 
 ```{r 3r_ICC207}
-d3.3_m3rc2rc_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_ICC2.0.7_power_plot)
+d3.1_m3rr2rr_ICC2.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_ICC2.0.7_power_plot)
 model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```
 
@@ -246,8 +211,8 @@ model.params.list[['ICC.3']] <- rep(0.7, M)
 $\text{ICC}_3$ = `r model.params.list[['ICC.3']]`
 
 ```{r 3r_ICC307}
-d3.3_m3rc2rc_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_ICC3.0.7_power_plot)
+d3.1_m3rr2rr_ICC3.0.7_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_ICC3.0.7_power_plot)
 model.params.list[['ICC.3']] <- params.default[['ICC.3']]
 ```
 
@@ -259,8 +224,8 @@ model.params.list[['ICC.2']] <- rep(0, M)
 $\text{ICC}_2$ = `r model.params.list[['ICC.2']]`
 
 ```{r 3r_ICC20}
-d3.3_m3rc2rc_ICC2.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_ICC2.0_power_plot)
+d3.1_m3rr2rr_ICC2.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_ICC2.0_power_plot)
 model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 ```
 
@@ -268,14 +233,95 @@ model.params.list[['ICC.2']] <- params.default[['ICC.2']]
 model.params.list[['ICC.3']] <- rep(0, M)
 ```
 \newpage
-$\text{ICC}_3$ = `r model.params.list[['ICC.3']]`
+$\text{ICC}_2$ = `r model.params.list[['ICC.2']]`
 
 ```{r 3r_ICC30}
-d3.3_m3rc2rc_ICC3.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
-print(d3.3_m3rc2rc_ICC3.0_power_plot)
+d3.1_m3rr2rr_ICC3.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_ICC3.0_power_plot)
 model.params.list[['ICC.3']] <- params.default[['ICC.3']]
 ```
 
+\newpage
+## Varying Omega
+
+```{r omega208}
+model.params.list[['omega.2']] <- rep(0.8, M)
+model.params.list[['omega.3']] <- params.default[['omega.3']]
+```
+
+$\omega_2$ = `r model.params.list[['omega.2']]`, $\omega_3$ = `r model.params.list[['omega.3']]`
+
+```{r 3r_omega208}
+d3.1_m3rr2rr_omega2.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_omega2.0.8_power_plot)
+```
+
+```{r omega308}
+model.params.list[['omega.2']] <- params.default[['omega.2']]
+model.params.list[['omega.3']] <- rep(0.8, M)
+```
+\newpage
+$\omega_2$ = `r model.params.list[['omega.2']]`, $\omega_3$ = `r model.params.list[['omega.3']]`
+
+```{r 3r_omega308}
+d3.1_m3rr2rr_omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_omega3.0.8_power_plot)
+```
+
+```{r omega208omega308}
+model.params.list[['omega.2']] <- rep(0.8, M)
+model.params.list[['omega.3']] <- rep(0.8, M)
+```
+\newpage
+$\omega_2$ = `r model.params.list[['omega.2']]`, $\omega_3$ = `r model.params.list[['omega.3']]`
+
+```{r 3r_omega208omega308}
+d3.1_m3rr2rr_omega2.0.8omega3.0.8_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_omega2.0.8omega3.0.8_power_plot)
+model.params.list[['omega.3']] <- params.default[['omega.3']]
+model.params.list[['omega.2']] <- params.default[['omega.2']]
+```
+
+
+```{r omega20}
+model.params.list[['omega.2']] <- rep(0, M)
+model.params.list[['omega.3']] <- params.default[['omega.3']]
+```
+\newpage
+$\omega_2$ = `r model.params.list[['omega.2']]`, $\omega_3$ = `r model.params.list[['omega.3']]`
+
+```{r 3r_omega20}
+d3.1_m3rr2rr_omega2.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_omega2.0_power_plot)
+model.params.list[['omega.2']] <- params.default[['omega.2']]
+```
+
+
+```{r omega30}
+model.params.list[['omega.3']] <- rep(0, M)
+```
+\newpage
+$\omega_2$ = `r model.params.list[['omega.2']]`, $\omega_3$ = `r model.params.list[['omega.3']]`
+
+```{r 3r_omega30}
+d3.1_m3rr2rr_omega3.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_omega3.0_power_plot)
+model.params.list[['omega.3']] <- params.default[['omega.3']]
+```
+
+```{r omega2030}
+model.params.list[['omega.2']] <- rep(0, M)
+model.params.list[['omega.3']] <- rep(0, M)
+```
+\newpage
+$\omega_2$ = `r model.params.list[['omega.2']]`, $\omega_3$ = `r model.params.list[['omega.3']]`
+
+```{r 3r_omega2030}
+d3.1_m3rr2rr_omega2.03.0_power_plot <- gen.power.results.plot(gen_params_file_base(model.params.list, sim.params.list, d_m), d_m)
+print(d3.1_m3rr2rr_omega2.03.0_power_plot)
+model.params.list[['omega.2']] <- params.default[['omega.2']]
+model.params.list[['omega.3']] <- params.default[['omega.3']]
+```
 \newpage
 # MDES validation
 
@@ -294,9 +340,9 @@ if(length(mdes.file) == 0)
   warning(paste('Results not yet computed for given parameters:', params.file.base))
 } else
 {
-  d3.3_m3rc2rc_mdes_results <- readRDS(mdes.file)
+  d3.1_m3rr2rr_mdes_results <- readRDS(mdes.file)
   pander::pandoc.table(
-    d3.3_m3rc2rc_mdes_results,
+    d3.1_m3rr2rr_mdes_results,
     style = "grid", split.tables = 100, row.names = FALSE, 
     caption = d_m
   )
@@ -307,8 +353,8 @@ if(length(mdes.file) == 0)
 
 Target value: `r model.params.list[['K']]`
 
-```{r 3r_sampleD1_K}
-d_m <- "d3.3_m3rc2rc"
+```{r 2r.sampleD1_K}
+d_m <- "d3.1_m3rr2rr"
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_K_D1indiv')
 if(length(sample.file) == 0)
@@ -316,9 +362,9 @@ if(length(sample.file) == 0)
   warning(paste('Results not yet computed for given parameters:', params.file.base))
 } else
 {
-  d3.3_m3rc2rc_sample_D1_K_results <- readRDS(sample.file)
+  d3.1_m3rr2rr_sample_D1_K_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.3_m3rc2rc_sample_D1_K_results,
+    d3.1_m3rr2rr_sample_D1_K_results,
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
@@ -327,8 +373,8 @@ if(length(sample.file) == 0)
 
 Target value: `r model.params.list[['J']]`
 
-```{r 3r_sampleD1_J}
-d_m <- "d3.3_m3rc2rc"
+```{r 2r.sampleD1_J}
+d_m <- "d3.1_m3rr2rr"
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_J_D1indiv')
 if(length(sample.file) == 0)
@@ -336,33 +382,31 @@ if(length(sample.file) == 0)
   warning(paste('Results not yet computed for given parameters:', params.file.base))
 } else
 {
-  d3.3_m3rc2rc_sample_D1_J_results <- readRDS(sample.file)
+  d3.1_m3rr2rr_sample_D1_J_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.3_m3rc2rc_sample_D1_J_results,
+    d3.1_m3rr2rr_sample_D1_J_results,
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
 }
 ```
 
-The target power cannot be achieved with the conservative Bonferroni correction.
-For other corrections, the power curve is very flat.
+Note: particularly flat power curves results in discrepancy for `J`.
 
 ```{r, results = 'hide', fig.width=5, fig.height=4}
-set.seed(343059)
 smp <- PUMP::pump_sample(
-  d_m = "d3.3_m3rc2rc",
-  MTP = 'BH',
+  design = "d3.1_m3rr2rr",
+  MTP = 'Bonferroni',
   typesample = 'J',
   MDES = model.params.list[['MDES']],
   M = model.params.list[['M']],
-  nbar = model.params.list[['nbar']],
   K = model.params.list[['K']],
-  target.power = 0.152,
+  nbar = model.params.list[['nbar']],
+  target.power = 0.727,
   power.definition = 'D1indiv',
   numCovar.1 = model.params.list[['numCovar.1']],
   numCovar.2 = model.params.list[['numCovar.2']],
-  numCovar.3 = model.params.list[['numCovar.3']],
+  numCovar.3 = 1,
   R2.1 = model.params.list[['R2.1']],
   R2.2 = model.params.list[['R2.2']],
   R2.3 = model.params.list[['R2.3']],
@@ -380,8 +424,8 @@ plot_power_curve(smp)
 
 Target value: `r model.params.list[['nbar']]`
 
-```{r 3r_sampleD1_nbar}
-d_m <- "d3.3_m3rc2rc"
+```{r 2r.sampleD1_nbar}
+d_m <- "d3.1_m3rr2rr"
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
 sample.file <- find_file(params.file.base, type = 'sample_nbar_D1indiv')
 if(length(sample.file) == 0)
@@ -389,27 +433,28 @@ if(length(sample.file) == 0)
   warning(paste('Results not yet computed for given parameters:', params.file.base))
 } else
 {
-  d3.3_m3rc2rc_sample_D1_nbar_results <- readRDS(sample.file)
+  d3.1_m3rr2rr_sample_D1_nbar_results <- readRDS(sample.file)
   pander::pandoc.table(
-    d3.3_m3rc2rc_sample_D1_nbar_results,
+    d3.1_m3rr2rr_sample_D1_nbar_results,
     style = "grid", split.tables = 100, row.names = FALSE,
     caption = d_m
   )
 }
 ```
 
+Note: particularly flat power curves results in discrepancy for `nbar`.
 
 ```{r, results = 'hide', fig.width=5, fig.height=4}
-set.seed(343059)
+set.seed(2344)
 smp <- PUMP::pump_sample(
-  d_m = "d3.3_m3rc2rc",
+  design = "d3.1_m3rr2rr",
   MTP = 'BH',
   typesample = 'nbar',
   MDES = model.params.list[['MDES']],
   M = model.params.list[['M']],
   J = model.params.list[['J']],
   K = model.params.list[['K']],
-  target.power = 0.279,
+  target.power = 0.824,
   power.definition = 'D1indiv',
   numCovar.1 = model.params.list[['numCovar.1']],
   numCovar.2 = model.params.list[['numCovar.2']],
