--- a/results/summary.Rmd
+++ b/results/summary.Rmd
@@ -26,14 +26,34 @@ panderOptions('round', 3)
 source(here::here("code", "misc.R"))
 ```
 
-```{r}
+# Introduction and notation
 
+\textbf{Simulated power intervals}.
+The Monte Carlo simulations produce a 95\% confidence interval, and we check whether that interval contains the `PUMP` estimates.
+In other words, we check if $\hat{p}_{pump}$ is within $\hat{p}_{sim} \pm 1.96 \sqrt{0.25/5000}$.
+
+\textbf{Simulated power point estimates}.
+We compare the point estimates from the simulations to `PUMP`.
+To do so, we calculate the absolute difference between the power estimates from the simulations and from `PUMP`:
+$$ b_{sim} = \lvert \hat{p}_{sim} - \hat{p}_{pump} \rvert.$$
+
+\textbf{PowerUpR power point estimates}.
+We compare the point estimates from the `PowerUpR` to `PUMP`.
+This comparison is only conducted for individual, unadjusted power.
+Similar to the last metric, we calculate the absolute difference between the power estimates from `PowerUpR` and from `PUMP`:
+$$ b_{pow} = \lvert \hat{p}_{pow} - \hat{p}_{pump} \rvert.$$
+
+
+
+\textbf{PUMP mdes point estimates}.
+We summarize the MDES performance by calculating the absolute difference between the `PUMP` estimate and the target MDES.
+$$ b_{mdes} = \lvert \hat{m}_{pump} - \hat{m}_{target} \rvert.$$
+
+```{r}
 # extract and summarize results for a particular d_m
-get.d_m.results <- function(d_m, power.files)
+get.d_m.power.results <- function(d_m, power.files)
 {
   results.files <- grep(d_m, power.files, value = TRUE)
-  # remove WY files
-  all.files <- grep('__B', power.files, value = TRUE)
   
   # stack results
   d_m.results <- NULL
@@ -48,12 +68,19 @@ get.d_m.results <- function(d_m, power.files)
   }
 
   row.names(d_m.results) <- NULL
+  # d_m.results %<>% mutate(
+  #   cover =
+  #     Sim_ci_lower <= PUMP_adjusted_power &
+  #     Sim_ci_upper >= PUMP_adjusted_power,
+  #   bias.sim = abs(Sim_adjusted_power - PUMP_adjusted_power) / PUMP_adjusted_power,
+  #   bias.pow = abs(PowerUp_adjusted_power - PUMP_adjusted_power) / PUMP_adjusted_power
+  # )
   d_m.results %<>% mutate(
     cover =
       Sim_ci_lower <= PUMP_adjusted_power &
       Sim_ci_upper >= PUMP_adjusted_power,
-    bias.sim = abs(Sim_adjusted_power - PUMP_adjusted_power) / PUMP_adjusted_power,
-    bias.pow = abs(PowerUp_adjusted_power - PUMP_adjusted_power) / PUMP_adjusted_power
+    bias.sim = abs(Sim_adjusted_power - PUMP_adjusted_power),
+    bias.pow = abs(PowerUp_adjusted_power - PUMP_adjusted_power)
   )
   d_m.results$d_m <- d_m
   
@@ -74,23 +101,20 @@ get.d_m.results <- function(d_m, power.files)
 all.files <- list.files(here::here('output'))
 # restrict to relevant files
 power.files <- grep('power', all.files, value = TRUE)
-# power.files <- grep('5000_S', power.files, value = TRUE)
-power.files <- grep('5000_S', power.files, value = TRUE)
+# subset into WY and not WY
+main.power.files <- grep('__B', power.files, value = TRUE)
+wy.power.files <- power.files[!(power.files %in% main.power.files)]
 
-# d_m.list <- c(
-#   "d1.1_m1c", "d2.1_m2fc", "d2.1_m2ff", "d2.1_m2fr",
-#   "d2.2_m2rc", "d3.1_m3rr2rr", "d3.2_m3ff2rc", "d3.2_m3rr2rc", "d3.3_m3rc2rc"
-# )
 d_m.list <- c(
   "d2.1_m2fc", "d2.1_m2ff", "d2.1_m2fr",
   "d2.2_m2rc", "d3.1_m3rr2rr", "d3.2_m3ff2rc", "d3.2_m3rr2rc", "d3.3_m3rc2rc"
 )
 
-all.results <- NULL
+all.power.results <- NULL
 for(d_m in d_m.list)
 {
-  d_m.results <- get.d_m.results(d_m, power.files)
-  all.results <- rbind(all.results, d_m.results)
+  d_m.results <- get.d_m.power.results(d_m, main.power.files)
+  all.power.results <- rbind(all.power.results, d_m.results)
 }
 
 ```
@@ -98,7 +122,7 @@ for(d_m in d_m.list)
 ```{r}
 # summarize coverage
 cover.results <- ddply(
-  all.results, c('d_m', 'MTP', 'power_type'),
+  all.power.results[all.power.results$agree,], c('d_m', 'MTP', 'power_type'),
   summarise,
   cover = mean(cover)
 )
@@ -107,14 +131,14 @@ cover.results <- ddply(
 ```{r}
 # summarize bias
 bias.results <- ddply(
-  all.results[all.results$cover,],
+  all.power.results[!is.na(all.power.results$cover) & all.power.results$cover,],
   c('d_m', 'MTP', 'power_type'),
   summarise,
-  mean.bias.sim = mean(bias.sim),
-  mean.bias.pow = mean(bias.pow[agree == TRUE], na.rm = TRUE)
+  mean.b.sim = mean(bias.sim),
+  mean.b.pow = mean(bias.pow[agree == TRUE], na.rm = TRUE)
 )
 # clean up for table printing
-bias.results$mean.bias.pow[is.nan(bias.results$mean.bias.pow)] = NA
+bias.results$mean.b.pow[is.nan(bias.results$mean.b.pow)] = NA
 ```
 
 # Summary of validation coverage results
@@ -137,10 +161,14 @@ for(scenario in d_m.list)
 # Coverage discrepancies
 
 We summarize below the scenarios where the simulation intervals do not cover the PUMP value.
-For brevity, we only display results for Bonferroni adjustments, beause 
+For brevity, we only display results for Bonferroni adjustments, because 
 ```{r, results = 'asis'}
 # extract out problem rows
-problems <- all.results[!is.na(all.results$cover) & all.results$cover != 1 & all.results$agree,]
+problems <- all.power.results[
+  !is.na(all.power.results$cover) &
+  all.power.results$cover != 1 &
+  all.power.results$agree,
+]
 problems <- problems %>%
   dplyr::select(d_m, MTP, power_type, omega.2, omega.3, ICC.2, ICC.3, 
          PUMP_adjusted_power, PowerUp_adjusted_power, Sim_adjusted_power,
@@ -184,8 +212,119 @@ for(scenario in d_m.list)
 }
 ```
 
+\newpage
+# Collapsed Summaries
+
+```{r}
+bias.results.summary <- ddply(
+  bias.results, 'd_m',
+  summarise,
+  avg.b.sim = mean(mean.b.sim),
+  max.b.sim = max(mean.b.sim),
+  mean.b.pow = mean(mean.b.pow, na.rm = TRUE)
+)
+colnames(bias.results.summary) <- c('d_m', 'mean.b.sim', 'max.b.sim', 'mean.b.pow')
+kable(bias.results.summary, booktabs = TRUE, row.names = FALSE, digits = 3)
+# kable(bias.results.summary, booktabs = TRUE, row.names = FALSE, digits = 3,
+# format = 'latex')
+```
+
+# WY Summary
+
+```{r}
+wy.power.results <- NULL
+for(d_m in d_m.list)
+{
+  d_m.results <- get.d_m.power.results(d_m, wy.power.files)
+  wy.power.results <- rbind(wy.power.results, d_m.results)
+}
+wy.power.results <- wy.power.results[wy.power.results$MTP %in% c('WY-SS', 'WY-SD'),]
+```
 
 
+```{r}
+wy.cover.results <- ddply(
+  wy.power.results, c('d_m', 'MTP', 'power_type'),
+  summarise,
+  cover = mean(cover)
+)
+```
+
+
+```{r}
+# summarize bias
+wy.bias.results <- ddply(
+  wy.power.results[!is.na(wy.power.results$cover) & wy.power.results$cover,],
+  c('d_m', 'MTP', 'power_type'),
+  summarise,
+  mean.b.sim = mean(bias.sim)
+)
+```
+
+```{r}
+wy.bias.results.summary <- ddply(
+  wy.bias.results, c('d_m', 'MTP'),
+  summarise,
+  avg.b.sim = mean(mean.b.sim),
+  max.b.sim = max(mean.b.sim)
+)
+colnames(wy.bias.results.summary) <- c('d_m', 'MTP', 'mean.b.sim', 'max.b.sim')
+kable(wy.bias.results.summary, booktabs = TRUE, row.names = FALSE, digits = 3)
+# kable(wy.bias.results.summary, booktabs = TRUE, row.names = FALSE, digits = 3,
+# format = 'latex')
+```
+
+# MDES summary
+
+
+```{r}
+# find files
+all.files <- list.files(here::here('output'))
+# restrict to relevant files
+mdes.files <- grep('mdes', all.files, value = TRUE)
+mdes.files <- grep('5000_S', mdes.files, value = TRUE)
+```
+
+```{r}
+# extract and summarize results for a particular d_m
+get.d_m.mdes.results <- function(d_m,  mdes.files)
+{
+  results.files <- grep(d_m, mdes.files, value = TRUE)
+  # remove WY files
+  mdes.file <- grep('__B', results.files, value = TRUE)
+  
+  results <- readRDS(here::here('output', mdes.file))
+
+  results$abs.rel.bias <- abs(results$`Adjusted MDES` - results$`Target MDES`) /  results$`Target MDES`
+
+  return(results)
+}
+```
+
+
+```{r}
+all.mdes.results <- NULL
+
+for(d_m in d_m.list)
+{
+  d_m.results <- get.d_m.mdes.results(d_m, mdes.files)
+  all.mdes.results <- rbind(all.mdes.results, d_m.results)
+}
+```
+
+```{r}
+kable(all.mdes.results, booktabs = TRUE, row.names = FALSE, digits = 3)
+```
+
+```{r}
+mdes.results.summary <- ddply(
+  all.mdes.results, 'd_m',
+  summarise,
+  mean.b.mdes = mean(abs.rel.bias, na.rm = TRUE)
+)
+kable(mdes.results.summary, booktabs = TRUE, row.names = FALSE, digits = 3)
+# kable(mdes.results.summary, format = 'latex', booktabs = TRUE, row.names = FALSE, digits = 3)
+```
 
 
 
