--- a/results/validate_d32.Rmd
+++ b/results/validate_d32.Rmd
@@ -71,7 +71,7 @@ Default parameters:
 
 Parameters by model type:
 
-* Omega3: $\omega_3$ = 0 for fixed effects, $\text{omega}_3$ = `r model.params.list[['omega.3']]` for random effects
+* Omega3: $\omega_3$ = 0 for fixed effects, $\omega_3$ = `r model.params.list[['omega.3']]` for random effects
 
 *Remark*.
 For some of the scenarios, the PUMP estimate is slightly outside the range of the monte carlo intervals. This occurs for the `d3.2_m3rr2rc` model when either $\omega_3 = 0$ or $ICC.3 = 0$.
