--- a/results/validate_wy.Rmd
+++ b/results/validate_wy.Rmd
@@ -196,7 +196,7 @@ print(d2.2_m2rc_power_plot)
 
 ```{r, results='hide'}
 ggsave(
-  here::here('validation/results', 'example_validation_plot.png'),
+  here::here('results', 'example_validation_plot.png'),
   d2.2_m2rc_power_plot,
   width = 6,
   height = 6,
